--- a/BankAccountManagement.WebMVC/Views/CheckingAccount/Edit.cshtml
+++ b/BankAccountManagement.WebMVC/Views/CheckingAccount/Edit.cshtml
@@ -15,13 +15,7 @@
         <h4>CheckingAccountEdit</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.CheckingAccountId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CheckingAccountId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CheckingAccountId, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        @Html.HiddenFor(model => model.CheckingAccountId)
 
         <div class="form-group">
             @Html.LabelFor(model => model.CheckingBalance, htmlAttributes: new { @class = "control-label col-md-2" })
