--- a/BankAccountManagement.WebMVC/Views/SavingsAccount/Edit.cshtml
+++ b/BankAccountManagement.WebMVC/Views/SavingsAccount/Edit.cshtml
@@ -15,7 +15,7 @@
         <h4>SavingsAccountEdit</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        
+        @Html.HiddenFor(model => model.SavingsAccountId)
 
         <div class="form-group">
             @Html.LabelFor(model => model.SavingsBalance, htmlAttributes: new { @class = "control-label col-md-2" })
