--- a/BankAccountManagement.WebMVC/Views/Transaction/Edit.cshtml
+++ b/BankAccountManagement.WebMVC/Views/Transaction/Edit.cshtml
@@ -15,6 +15,7 @@
         <h4>TransactionEdit</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.TransactionId)
         <div class="form-group">
             @Html.LabelFor(model => model.TransactionId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
