modified nav bar links

--- a/BankAccountManagement.WebMVC/Views/Shared/_Layout.cshtml
+++ b/BankAccountManagement.WebMVC/Views/Shared/_Layout.cshtml
@@ -21,9 +21,10 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Customers", "Index", "Customer")</li>
+                    <li>@Html.ActionLink("Savings Accounts", "Index", "SavingsAccount")</li>
+                    <li>@Html.ActionLink("Checking Accounts", "Index", "CheckingAccount")</li>
+                    <li>@Html.ActionLink("Transactions", "Index", "Transaction")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
