--- a/BankAccountManagement.WebMVC/Content/Site.css
+++ b/BankAccountManagement.WebMVC/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color: black;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -21,4 +22,19 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+.jumbotron {
+    background-color: black;
+    margin-top: 100px;
+}
+
+.nav.navbar-nav.navbar-right li a{
+    color: black;
+}
+.navbar.navbar-expand-lg.bg-warning.navbar-dark.fixed-top a {
+    color: black;
+}
+.table{
+    color: white;
 }
